# af3_cryptic

./: README.md  additional_set_8.csv  pnas_table.csv  pyproject.toml
scripts/: calc_lig_rmsd.py  clash_sum.py  classify_conf_by_clash.py  classify_pdbs.py  count_clash_and_rmsd.py  count_states_all.py  find_clashes_in_different_structs.py  loop_rmsd_pdbs.py  plot_clashes.py  plot_lig_rmsds.py  plot_overall_subplots_paper.py  plot_subplots_paper.py  rmsd_and_plddt.py  rmsd_vs_plddt.py  sampling_bootstrap.py  schain_rmsd_pdb.py
utils/: lig_rmsd_funct.py
